[package]
name = "compliant-swap"
version = "0.1.0"
edition = "2021"
description = "Example: Soroban DEX with Engram Compliance Oracle integration"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
